--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <h1>Phil</h1>
 
-  <img src="https://www.linkedin.com/dms/C4E04AQHhYhpg4uyZaQ/profile-originalphoto-shrink_900_1200/0/1569790889626?m=AQJ9TtiGNpoGEAAAAXYbxUtJla70xttg0tb0foczdQnu1Gx_KsZdYgRS&e=1606870083&v=beta&t=N3LDZsh1x-dX2ltTu3oYXpKZzEdcfdFYS1bCueyxkcc" alt="Your Name">
+  <img src="1569790889626.jpeg" alt="Your Name">
 
   <p>I am the instructor of the University of Minnesota Sept-March Data Cohort</p>
   <p>I am also the Sr. Manager of Software Engineering and DevOps at Echo Logistics</p>
