Added new image and modified index file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <li><strong>LinkedIn:</strong> <a href="#">http://linkedin.com/in/philipwise</a></li>
   </ul>
 
+  <h2>My repositories:</h2>
+  <ul>
+    <li><a href="https://bballphil414.github.io/automatic-octo-giggle/">Automatic Octo Giggle Repo</a></li>
+  </ul>
+
   <table>
     <tr>
       <th>Books</th>
